lots of changes     smoother new file transition to store data     easy switching between downloading dev and mainnnet     pandas organizing and graphing of interaction data

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ node_modules
 *.log*
 
 yarn.lock
+/.DS_Store
+/chain_metrics/devnet/
+/chain_metrics/mainnet-beta/
+/chain_metrics/package-lock.json
