--- a/chain_metrics/package.json
+++ b/chain_metrics/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@solana/web3.js": "^1.41.1"
+    "@solana/web3.js": "^1.41.1",
+    "natural-orderby": "^2.0.3"
   },
   "type": "module"
 }
