added postgres support, funcitons to transfer all json data into     postgres, able to query oldest, youngest data and bucket up # of     tx per day, week, etc

--- a/chain_metrics/package.json
+++ b/chain_metrics/package.json
@@ -5,7 +5,11 @@
   "license": "MIT",
   "dependencies": {
     "@solana/web3.js": "^1.41.1",
-    "natural-orderby": "^2.0.3"
+    "bluebird": "^3.7.2",
+    "natural-orderby": "^2.0.3",
+    "pg": "^8.7.3",
+    "pg-pool": "^3.5.1",
+    "pg-promise": "^10.11.1"
   },
   "type": "module"
 }
