--- a/chain_metrics/package.json
+++ b/chain_metrics/package.json
@@ -5,11 +5,13 @@
   "license": "MIT",
   "dependencies": {
     "@solana/web3.js": "^1.41.1",
+    "axios": "^0.27.2",
     "bluebird": "^3.7.2",
     "natural-orderby": "^2.0.3",
     "pg": "^8.7.3",
     "pg-pool": "^3.5.1",
-    "pg-promise": "^10.11.1"
+    "pg-promise": "^10.11.1",
+    "request": "^2.88.2"
   },
   "type": "module"
 }
